fixed horizontal scroll issue

--- a/src/pages/explore-page/ExplorePage-Style.css
+++ b/src/pages/explore-page/ExplorePage-Style.css
@@ -1,6 +1,6 @@
 .explorepage {
   background-color: #f7f7f7;
-  width: 100vw;
+  width: 100%;
 }
 
 .explorepage__inner {
