--- a/src/pages/landing-page/LandingPage-Style.css
+++ b/src/pages/landing-page/LandingPage-Style.css
@@ -1,3 +1,8 @@
+.landingpage{
+  max-width: 100vw;
+}
+
+
 h1 {
   color: green;
 }
