--- a/src/pages/login-page/LoginPage-Style.css
+++ b/src/pages/login-page/LoginPage-Style.css
@@ -33,7 +33,7 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url("https://i.imgur.com/FQ6eh0i.jpg");
 }
