--- a/src/pages/manageoffers-page/ManageOffersPage-Style.css
+++ b/src/pages/manageoffers-page/ManageOffersPage-Style.css
@@ -1,6 +1,6 @@
 .manageoffers-banner {
   height: 280px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,7 +100,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 .manageoffers-nv__body {
   display: flex;
