--- a/src/pages/profile-page/UserProfilePage-Style.css
+++ b/src/pages/profile-page/UserProfilePage-Style.css
@@ -1,6 +1,6 @@
 .pagewrap {
   background-color: #f7f7f7;
-  width: 100vw;
+  width: 100%;
 }
 
 .profilewrap {
