--- a/src/pages/register-page/RegisterPage-Style.css
+++ b/src/pages/register-page/RegisterPage-Style.css
@@ -3,7 +3,7 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url("https://i.imgur.com/VloYU9M.jpg");
 }
