--- a/src/pages/summary-page/SummaryPage-Style.css
+++ b/src/pages/summary-page/SummaryPage-Style.css
@@ -1,6 +1,6 @@
 .summarypage {
   background-color: #f7f7f7;
-  width: 100vw;
+  width: 100%;
 }
 
 .summarypage__inner {
